syntax="proto3";

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string theme = 4;
}

message AddBookRequest {
    string title = 1;
    string author = 2;
    string theme = 3;
}

message AddBookResponse {
    string message = 1;
}

message GetBookResponse {
    repeated Book books = 1;
}

message Empty {}

service LibraryService {
    rpc AddBook (AddBookRequest) returns (AddBookResponse);
    rpc GetBooks (Empty) returns (GetBookResponse);
}